force-app/main/default/objects/Revenue_Routing_Rule__mdt/Revenue_Routing_Rule__mdt.object-meta.xml
<CustomObject>
    <description
  >Maps a (segment, region, product family) tuple to the target queue / role / routing reason for new-Opportunity routing. The Northstar routing service reads all active rows, sorts by Priority__c ascending, and applies the first match.</description>
    <label>Revenue Routing Rule</label>
    <pluralLabel>Revenue Routing Rules</pluralLabel>
</CustomObject>