force-app/main/default/objects/Revenue_Routing_Rule__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description
  >Ordering hint. Routing service sorts ascending and applies the first match — lower number = higher priority. Leave gaps (10, 20, 30 ...) so new rules can be inserted without renumbering.</description>
    <inlineHelpText
  >Lower number = higher priority. Use gaps of 10.</inlineHelpText>
    <label>Priority</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>