force-app/main/default/objects/Revenue_Routing_Rule__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Sales region to match. Inline value set duplicating Northstar_Region GVS (GVS not supported on MDT — see Segment__c).</description>
    <inlineHelpText>Sales region this rule applies to.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA West</fullName>
            </value>
            <value>
                <fullName>NA East</fullName>
            </value>
            <value>
                <fullName>NA Central</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>