force-app/main/default/objects/Revenue_Routing_Rule__mdt/fields/Routing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Routing_Reason__c</fullName>
    <description
  >Text stamped onto Opportunity.Routing_Reason__c / Account.Routing_Reason__c when this rule fires, so the explanation survives audit/reporting.</description>
    <inlineHelpText
  >Reason text stamped on the record when this rule wins.</inlineHelpText>
    <label>Routing Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>