force-app/main/default/objects/Revenue_Routing_Rule__mdt/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Account customer segment to match. Inline value set duplicating Northstar_Customer_Segment GVS — Salesforce does not allow GVS on Custom Metadata Type fields, so MDT picklist values are maintained alongside the GVS. Keep in sync if either changes.</description>
    <inlineHelpText>Customer segment this routing rule applies to.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Partner Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>