force-app/main/default/objects/Revenue_Routing_Rule__mdt/fields/Target_Queue__c.field-meta.xml
<CustomField>
    <fullName>Target_Queue__c</fullName>
    <description
  >Queue DeveloperName to assign the matched record's owner to. The routing service looks up the Queue by DeveloperName at runtime — keeps the rule decoupled from queue Ids that change per org. Mutually exclusive with Target_Role__c (rule fires whichever is set).</description>
    <inlineHelpText
  >DeveloperName of the target Queue. Leave blank if Target Role is set.</inlineHelpText>
    <label>Target Queue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>