force-app/main/default/objects/Revenue_Routing_Rule__mdt/fields/Target_Role__c.field-meta.xml
<CustomField>
    <fullName>Target_Role__c</fullName>
    <description
  >Role DeveloperName to look up the assignee from (typically picks any active user in the role). Used for direct user assignment (e.g. Enterprise AE pool); mutually exclusive with Target_Queue__c.</description>
    <inlineHelpText
  >DeveloperName of the target Role. Leave blank if Target Queue is set.</inlineHelpText>
    <label>Target Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>